--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,7 @@
                     </div>
                     
                     <div class="text-center mt-3">
-                        <a href="#" onclick="alert('Reset password in sviluppo')" class="text-decoration-none">
+                        <a href="{{ url_for('forgot_password') }}" class="text-decoration-none">
                             <small><i class="fas fa-key me-1"></i>Password dimenticata?</small>
                         </a>
                     </div>
